--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>My First Leaflet Map</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>NTUMap</title>
   <script src="lib/leaflet/leaflet.js"></script>
   <link rel="stylesheet" href="lib/leaflet/leaflet.css">
   <link rel="stylesheet" href="map.css">
 </head>
-
 <body>
   <div id="map"></div>
 </body>
-
 <script src="map.js"></script>
 </html>
